--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,9 @@ androidx-test-junit = "1.2.0"
 compose-plugin = "1.6.11"
 junit = "4.13.2"
 kotlin = "2.0.0"
+voyager = "1.0.0"
+kotlinx-serialization-json = "1.6.1"
+koinVersion = "3.5.3"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -26,6 +29,13 @@ androidx-material = { group = "com.google.android.material", name = "material", 
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 compose-material-icons-extended = {module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "compose-plugin"}
+kotlinx-serialization-json = {module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json"}
+navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager"}
+navigator-tabs = { module = "cafe.adriel.voyager:voyager-tab-navigator", version.ref = "voyager"}
+navigator-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager"}
+navigator-screenModel = { module = "cafe.adriel.voyager:voyager-screenmodel", version.ref = "voyager"}
+koin-voyager = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager"}
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinVersion"}
 
 
 [plugins]
@@ -33,4 +43,5 @@ androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlinSerialization = {id = "org.jetbrains.kotlin.plugin.serialization", version.ref="kotlin"}
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
