--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ kotlinx-serialization-json = "1.6.1"
 koinVersion = "3.5.3"
 ktor = "2.3.12"
 kotlin-dateTime = "0.4.1"
-coilVersion = "2.7.0"
+landscapistVersion = "2.3.8"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -35,7 +35,6 @@ compose-material-icons-extended = {module = "org.jetbrains.compose.material:mate
 
 kotlinx-serialization-json = {module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json"}
 kotlinx-dateTime = {module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlin-dateTime"}
-kotlinx-dateTime-format = {module = "org.jetbrains.kotlinx:kotlinx-datetime-format", version.ref = "kotlin-dateTime"}
 
 navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager"}
 navigator-tabs = { module = "cafe.adriel.voyager:voyager-tab-navigator", version.ref = "voyager"}
@@ -47,11 +46,10 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinVersion"}
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor"}
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor"}
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor"}
-ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor"}
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor"}
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor"}
 
-coil = { module = "io.coil-kt:coil-compose", version.ref="coilVersion"}
+landscapist-coil = { module = "com.github.skydoves:landscapist-coil3", version.ref="landscapistVersion"}
 
 
 [plugins]
@@ -66,6 +64,5 @@ kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref =
 ktor = [
     "ktor-client-core",
     "ktor-client-content-negotiation",
-    "ktor-client-logging",
     "ktor-serialization-kotlinx-json"
 ]
