--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ ktor = "2.3.12"
 kotlin-dateTime = "0.4.1"
 koin-bom = "4.0.0"
 landscapistVersion = "2.3.8"
+dateTimePickerVersion = "1.0.2"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -52,6 +53,7 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor"}
 
 landscapist-coil = { module = "com.github.skydoves:landscapist-coil3", version.ref="landscapistVersion"}
+kmp-dateTime-picker = { module = "network.chaintech:kmp-date-time-picker", version.ref="dateTimePickerVersion"}
 
 
 [plugins]
